Service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-back
spec:
  type: ClusterIP
  selector:
    app: app-back
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
