Service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: dev-app1
  labels:
    app: app-front
spec:
  selector:
    app: app-front
  ports:
    - protocol: TCP
      port: 5173  # The port your service will listen on
      targetPort: 5173  # The port your frontend container listens on
  type: ClusterIP  # Change to NodePort to expose the service externally
